carousel caption overlap bug

--- a/integrations-client/app/styles/app.css
+++ b/integrations-client/app/styles/app.css
@@ -964,6 +964,9 @@ button{
     position:relative;
     color: #496174;
 }
+.carousel-control-prev, .carousel-control-next{
+    width:unset;
+}
 
 /* misc */
 * {
